--- a/application/views/scripts/search/dossier.phtml
+++ b/application/views/scripts/search/dossier.phtml
@@ -34,129 +34,151 @@
 <!-- Onglets permettant de selectionner les entités à rechercher -->
 <h2 class="page-header">Dossiers</h2>
 <form method='get' class='row-fluid'>
-
     <div class='navbar-form form-search well well-small span12' style='margin-bottom: 5px;'>
-            <div class="pull-left input-append">
-                <input type="text" name='objet' class="input-xlarge search-query" placeholder="Objet du dossier ..." value="<?php if(isset($_GET["objet"])) echo htmlentities($_GET["objet"]) ?>" />
-                    <input type='submit' class="btn" value="Rechercher"  />
-                    <input type='hidden' name='page' value="1" />
-            </div>
-        
-            <div class="pull-left" style='margin: 9px 0 0 5px'>
-                <small>
-                    <a href="/search/dossier?label=&page=1">
-                        Réinitialiser
-                    </a>
-                </small>
-            </div>
-        
+        <div class="pull-left input-append">
+            <input type="text" name='objet' class="input-xlarge search-query" placeholder="Objet du dossier ..." value="<?php if(isset($_GET["objet"])) echo htmlentities($_GET["objet"]) ?>" onkeypress="masquerBoutonExportCalc()"/>
+                <input type='submit' class="btn" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()" />
+                <input type='hidden' name='page' value="1" />
+        </div>
+    
+        <div class="pull-left" style='margin: 9px 0 0 5px'>
+            <small>
+                <a href="/search/dossier?label=&page=1">
+                    Réinitialiser
+                </a>
+            </small>
+        </div>
     </div>
 
-
-
     <div id='filterContainer' class='well span12' style="margin-left: 0;">
-            <div class='row-fluid'>
-                <select name='types[]' class="span3 chosen" data-placeholder='Types' multiple>
-                    <?php foreach( $this->DB_type as $type ) : ?>
-                        <option value='<?php echo $type["ID_DOSSIERTYPE"] ?>' <?php if(isset($_GET["types"]) && in_array($type["ID_DOSSIERTYPE"], (array) $_GET["types"])) echo 'selected' ?>><?php echo $type["LIBELLE_DOSSIERTYPE"] ?></option>
-                    <?php endforeach ?>
-                </select>
-                <select name='commissions[]' class="span3 chosen" data-placeholder='Commissions' multiple>
-                    <?php
-                        foreach($this->array_commissions as $array_commission){
-                            echo "<optgroup label='".htmlspecialchars($array_commission["LIBELLE"], ENT_QUOTES)."' >";
-                            foreach($array_commission["ARRAY"] as $item){
-                                    echo "<option value='".$item["ID_COMMISSION"]."'";
-                                    if(isset($_GET["commissions"]) && in_array($item["ID_COMMISSION"], (array) $_GET["commissions"])) echo 'selected';
-                                    echo " >".htmlspecialchars($item["LIBELLE_COMMISSION"], ENT_QUOTES)."</option>";
-                            }
-                            echo "</optgroup>";
+        <div class='row-fluid'>
+            <select name='types[]' class="span3 chosen" data-placeholder='Types' multiple onchange="masquerBoutonExportCalc()">
+                <?php foreach( $this->DB_type as $type ) : ?>
+                    <option value='<?php echo $type["ID_DOSSIERTYPE"] ?>' <?php if(isset($_GET["types"]) && in_array($type["ID_DOSSIERTYPE"], (array) $_GET["types"])) echo 'selected' ?>><?php echo $type["LIBELLE_DOSSIERTYPE"] ?></option>
+                <?php endforeach ?>
+            </select>
+            <select name='commissions[]' class="span3 chosen" data-placeholder='Commissions' multiple onchange="masquerBoutonExportCalc()">
+                <?php
+                    foreach($this->array_commissions as $array_commission){
+                        echo "<optgroup label='".htmlspecialchars($array_commission["LIBELLE"], ENT_QUOTES)."' >";
+                        foreach($array_commission["ARRAY"] as $item){
+                            echo "<option value='".$item["ID_COMMISSION"]."'";
+                            if(isset($_GET["commissions"]) && in_array($item["ID_COMMISSION"], (array) $_GET["commissions"])) echo 'selected';
+                            echo " >".htmlspecialchars($item["LIBELLE_COMMISSION"], ENT_QUOTES)."</option>";
                         }
+                        echo "</optgroup>";
+                    }
 
-                    ?>
-                </select>
-                <select name='avisCommission[]' class="span3 chosen" data-placeholder='Avis de la commission' multiple>
-                                    <option value='1' <?php if(isset($_GET["avisCommission"]) && in_array(1, (array) $_GET["avisCommission"])) echo 'selected' ?>>Favorable</option>
-                                    <option value='2' <?php if(isset($_GET["avisCommission"]) && in_array(2, (array) $_GET["avisCommission"])) echo 'selected' ?>>Défavorable</option>
-                </select>
-                <select name='avisRapporteur[]' class="span3 chosen" data-placeholder='Avis du rapporteur' multiple>
-                                    <option value='1' <?php if(isset($_GET["avisRapporteur"]) && in_array(1, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Favorable</option>
-                                    <option value='2' <?php if(isset($_GET["avisRapporteur"]) && in_array(2, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Défavorable</option>
-                </select>
-            </div>
-            <div class='row-fluid span12'>
-            </div>
-            <div class='row-fluid'>
-                <div class='span4'>
-                    <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune'>
-                        <option value=''></option>
-                    <?php foreach( $this->array_communes as $commune ) : ?>
-                        <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
-                    <?php endforeach ?>
-                    </select>
-                </div>
-                <div class='span3'>
-                    <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie'>
-                        <option value=''></option>
-                        <?php foreach( $this->array_voies as $voie ) : ?>
-                            <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
+                ?>
+            </select>
+            <select name='groupements_territoriaux[]' class="span3 chosen" data-placeholder='Groupements territoriaux' multiple onchange="masquerBoutonExportCalc()">
+                <?php foreach( $this->DB_groupementterritorial as $groupement ) : ?>
+                    <?php $selected = false; ?>
+                    <?php if ($this->user['groupements'] != null): ?>
+                        <?php foreach($this->user['groupements'] as $user_groupement): ?>
+                            <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
+                                <?php $selected = true; ?>
+                                <?php break; ?>
+                            <?php endif ?>
                         <?php endforeach ?>
-                    </select>
-                    <script>
-
-                    </script>
-                </div>
-                <div class='span5'>
-                    <span class='span1'>&nbsp;</span>
-                    <span class='span2'>Création</span>
-                    <span class='span1'>du&nbsp;</span>
-
-
-                    <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span3'>
-                    &nbsp;au&nbsp;
-                    <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span3'>
-                </div>
-            </div>
-            <div class='row-fluid'>
-                <div class='span4'>
-                    <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" />
-                </div>
-                <div class='span3'>&nbsp;</div>
-                <div class='span5'>
-                    <span class='span1'>&nbsp;</span>
-                    <span class='span2'>Réception</span>
-                    <span class='span1'>du&nbsp;</span>
-                    <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span3' />
-                    &nbsp;au&nbsp;
-                    <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span3' />
-                </div>
-            </div>
-            <div class='row-fluid'>
-                <div class='span4'>
-                    <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionnez un préventionniste'>
-                        <option value=''></option>
-                        <?php foreach( $this->liste_prev as $prev ) : ?>
-                        <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
-                        <?php endforeach ?>
-                    </select>
-                </div>
-                <div class='span3'>&nbsp;</div>
-                <div class='span5'>
-                    <span class='span1'>&nbsp;</span>
-                    <span class='span2'>Réponse</span>
-                    <span class='span1'>du&nbsp;</span>
-                    <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span3' />
-                    &nbsp;au&nbsp;
-                    <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span3' />
-                </div>
+                    <?php endif ?>
+                    <option value='<?php echo $groupement["ID_GROUPEMENT"] ?>' <?php if((isset($_GET["groupements_territoriaux"]) && in_array($groupement["ID_GROUPEMENT"], (array) $_GET["groupements_territoriaux"])) || $selected) echo 'selected' ?>>
+                        <?php echo $groupement["LIBELLE_GROUPEMENT"] ?>
+                    </option>
+                <?php endforeach ?>
+            </select>
+            <select name='avisCommission[]' class="span3 chosen" data-placeholder='Avis de la commission' multiple onchange="masquerBoutonExportCalc()">
+                <option value='1' <?php if(isset($_GET["avisCommission"]) && in_array(1, (array) $_GET["avisCommission"])) echo 'selected' ?>>Favorable</option>
+                <option value='2' <?php if(isset($_GET["avisCommission"]) && in_array(2, (array) $_GET["avisCommission"])) echo 'selected' ?>>Défavorable</option>
+            </select>
+            <!-- On met une div pour ne pas coller les select de la 1ère ligne avec ceux de la seconde ligne -->
+            <div style="margin-top: 5px;">
+                <select name='avisRapporteur[]' class="span3 chosen" data-placeholder='Avis du rapporteur' multiple onchange="masquerBoutonExportCalc()">
+                    <option value='1' <?php if(isset($_GET["avisRapporteur"]) && in_array(1, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Favorable</option>
+                    <option value='2' <?php if(isset($_GET["avisRapporteur"]) && in_array(2, (array) $_GET["avisRapporteur"])) echo 'selected' ?>>Défavorable</option>
+                </select>
             </div>
         </div>
-</form>
+        <div class='row-fluid span12'>
+        </div>
+        <div class='row-fluid'>
+            <div class='span4'>
+                <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune'>
+                    <option value=''></option>
+                <?php foreach( $this->array_communes as $commune ) : ?>
+                    <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
+                <?php endforeach ?>
+                </select>
+            </div>
+            <div class='span3'>
+                <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie'>
+                    <option value=''></option>
+                    <?php foreach( $this->array_voies as $voie ) : ?>
+                        <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
+                    <?php endforeach ?>
+                </select>
+            </div>
+            <div class='span5'>
+                <span class='span1'>&nbsp;</span>
+                <span class='span2'>Création</span>
+                <span class='span1'>du&nbsp;</span>
 
 
+                <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()">
+                &nbsp;au&nbsp;
+                <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()">
+            </div>
+        </div>
+        <div class='row-fluid'>
+            <div class='span4'>
+                <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" />
+            </div>
+            <div class='span3'>&nbsp;</div>
+            <div class='span5'>
+                <span class='span1'>&nbsp;</span>
+                <span class='span2'>Réception</span>
+                <span class='span1'>du&nbsp;</span>
+                <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                &nbsp;au&nbsp;
+                <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+            </div>
+        </div>
+        <div class='row-fluid'>
+            <div class='span4'>
+                <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionnez un préventionniste'>
+                    <option value=''></option>
+                    <?php foreach( $this->liste_prev as $prev ) : ?>
+                    <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
+                    <?php endforeach ?>
+                </select>
+            </div>
+            <div class='span3'>&nbsp;</div>
+            <div class='span5'>
+                <span class='span1'>&nbsp;</span>
+                <span class='span2'>Réponse</span>
+                <span class='span1'>du&nbsp;</span>
+                <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+                &nbsp;au&nbsp;
+                <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span3' onkeypress="masquerBoutonExportCalc()"/>
+            </div>
+        </div>
+    </div>
 
 <?php if( count($this->results) > 0 ) : ?>
-    <p class='muted'><small>Nombre total d'éléments : <?php echo $this->results->getTotalItemCount() ?></small></p>
+    <div style='display:inline-block;width: 100%;' >
+        <div class='pull-left'>
+            <p class='muted'><small>Nombre total d'éléments : <?php echo $this->results->getTotalItemCount() ?></small></p>
+        </div>
+        <?php if( $this->results->getTotalItemCount() <= 10000 ) : ?>
+            <div class='pull-right'>
+                <input type='submit' class='btn btn-success' id='exporter' name='Exporter' value='Export Calc' <?php echo (($this->is_allowed_export_calc) ? '' : 'style="visibility: hidden;"') ?>>
+            </div>
+        <?php else : ?>
+            <div class='pull-right' <?php echo (($this->is_allowed_export_calc) ? '' : 'style="visibility: hidden;"') ?>>
+                <small style='font-weight:bold;color:red;'>La fonctionnalité d'export Calc est limitée à 10 000 éléments</small>
+            </div>
+        <?php endif ?>
+    </div>
 
     <table class='table table-condensed'>
         <tr>
@@ -175,6 +197,7 @@
 	<p class='muted'><small>Aucun résultat disponible.</small></p>
     <h2 style='color: silver; text-align: center;' ></h2>
 <?php endif ?>
+</form>
 
 <script>
     $(document).ready(function() {
@@ -256,6 +279,19 @@
             var rowvalue = $(this).find('i').attr('id').substring(6);
             $('#rowpj'+rowvalue).toggle();
         });
-
     });
+
+    function masquerBoutonExportCalc ()
+    {   
+        <?php if(count($this->results) > 0 && $this->results->getTotalItemCount() <= 10000 && $this->is_allowed_export_calc) :?>
+            document.getElementById('exporter').style.display = "none"
+        <?php endif ?>
+    }
+
+    function afficherBoutonExportCalc ()
+    {
+        <?php if(count($this->results) > 0 && $this->results->getTotalItemCount() <= 10000 && $this->is_allowed_export_calc) :?>
+            document.getElementById('exporter').style.display = "inline"
+        <?php endif ?>
+    }
 </script>
