--- a/application/views/scripts/contact/form.phtml
+++ b/application/views/scripts/contact/form.phtml
@@ -1,110 +1,161 @@
 <!-- Formulaire d'ajout d'un contact -->
-<form id='formulaire_contact' action='post' >
-
+<form id='formulaire_contact' action='post'>
 	<!-- Formulaire -->
 	<dl class='dl-horizontal'>
-	
 		<?php if(!isset($this->droitsSYS) || $this->droitsSYS == 1) : ?>
-		<!-- Groupe -->
-		<?php if( $this->item == "user" ) : ?>
-		<dt>Groupe</dt>
-		<dd>
-			<select name='ID_GROUPE' >
-				<?php foreach( $this->groupes as $item ) : ?>
-				<option value='<?php echo $item["ID_GROUPE"] ?>' <?php if($item["ID_GROUPE"] == $this->user["ID_GROUPE"]) echo "selected" ?> ><?php echo $item["LIBELLE_GROUPE"] ?></option>
-				<?php endforeach ?>
-			</select>
-		</dd>
+            <!-- Groupe -->
+            <?php if( $this->item == "user" ) : ?>
+                <dt>Groupe</dt>
+                <dd>
+                    <select name='ID_GROUPE' >
+                        <?php foreach( $this->groupes as $item ) : ?>
+                            <option value='<?php echo $item["ID_GROUPE"] ?>' <?php if($item["ID_GROUPE"] == $this->user["ID_GROUPE"]) echo "selected" ?> ><?php echo $item["LIBELLE_GROUPE"] ?></option>
+                        <?php endforeach ?>
+                    </select>
+                </dd>
+            <?php endif ?>
+            
+            <!-- Fonction du contact -->
+            <?php if( $this->item != "groupement_coord" ) : ?>
+                <dt <?php if($this->item == "commune") echo "style='display: none'"; ?>>Fonction</dt>
+                <dd <?php if($this->item == "commune") echo "style='display: none'"; ?>>
+                    <select name='ID_FONCTION' >
+                        <?php foreach( $this->contact_fonction_list as $item ) : ?>
+                            <?php
+                                if(
+                                    $item["ID_FONCTION"] != 2
+                                    || $this->user_info != null
+                                ) {
+                            ?>
+                                <option value='<?php echo $item["ID_FONCTION"] ?>' <?php if(($item["ID_FONCTION"] == $this->user_info["ID_FONCTION"]) || ($this->item == "commune" && $item["ID_FONCTION"] == 2)) echo "selected" ?> ><?php echo $item["LIBELLE_FONCTION"] ?></option>
+                            <?php } ?>
+                        <?php endforeach ?>
+                    </select>
+                </dd>
+            <?php endif ?>
+            
+            <!-- Société du contact-->
+            <?php if( $this->item != "user" && $this->item != "commune") : ?>
+                <dt>Société</dt>
+                <dd>
+                    <input type='text' value="<?php if(isset($this->user_info["SOCIETE_UTILISATEURINFORMATIONS"])) echo $this->user_info["SOCIETE_UTILISATEURINFORMATIONS"] ?>" name='SOCIETE_UTILISATEURINFORMATIONS' />
+                </dd>
+            <?php endif ?>
 		<?php endif ?>
 		
-		<!-- Fonction du contact -->
-		<?php if( $this->item != "groupement_coord" ) : ?>
-		<dt <?php if($this->item == "commune") echo "style='display: none'"; ?>>Fonction</dt>
-		<dd <?php if($this->item == "commune") echo "style='display: none'"; ?>>
-			<select name='ID_FONCTION' >
-				<?php foreach( $this->contact_fonction_list as $item ) : ?>
-					<?php
-						if(
-							$item["ID_FONCTION"] != 2
-							|| $this->user_info != null
-						) {
-					?>
-						<option value='<?php echo $item["ID_FONCTION"] ?>' <?php if(($item["ID_FONCTION"] == $this->user_info["ID_FONCTION"]) || ($this->item == "commune" && $item["ID_FONCTION"] == 2)) echo "selected" ?> ><?php echo $item["LIBELLE_FONCTION"] ?></option>
-					<?php } ?>
-				<?php endforeach ?>
-			</select>
-		</dd>
-		<?php endif ?>
-		
-		<!-- Société du contact-->
-		<?php if( $this->item != "user" && $this->item != "commune") : ?>
-		<dt>Société</dt>
-		<dd>
-			<input type='text' value="<?php if(isset($this->user_info["SOCIETE_UTILISATEURINFORMATIONS"])) echo $this->user_info["SOCIETE_UTILISATEURINFORMATIONS"] ?>" name='SOCIETE_UTILISATEURINFORMATIONS' />
-		</dd>
-		<?php endif ?>
-		
-		<?php endif ?>
-		
+        <!-- @fixme: Mettre des margin-top en mobile/tablette -->
 		<!-- Nom et prénom du contact-->
 		<dt>Nom</dt>
 		<dd>
-			<select name='ID_UTILISATEURCIVILITE' style='width: 90px' >
-				<option value='null' >--</option>
-				<?php foreach( $this->civilite_list as $item ) : ?>
-					<option value="<?php echo $item["ID_UTILISATEURCIVILITE"] ?>" <?php if($item["ID_UTILISATEURCIVILITE"] == $this->user_info["ID_UTILISATEURCIVILITE"]) echo "selected" ?> ><?php echo $item["LIBELLE_UTILISATEURCIVILITE"] ?></option>
-				<?php endforeach ?>
-			</select>
-			<input type='text' maxlength="50" value="<?php if(isset($this->user_info["NOM_UTILISATEURINFORMATIONS"])) echo $this->user_info["NOM_UTILISATEURINFORMATIONS"] ?>" name='NOM_UTILISATEURINFORMATIONS' placeholder='Nom' />
-			<input type='text' maxlength="50" value="<?php if(isset($this->user_info["PRENOM_UTILISATEURINFORMATIONS"])) echo $this->user_info["PRENOM_UTILISATEURINFORMATIONS"] ?>" name='PRENOM_UTILISATEURINFORMATIONS' placeholder='Prénom' />
+            <div class="col-md-2">
+                <select class="form-control" name='ID_UTILISATEURCIVILITE'>
+                    <option value='null' >--</option>
+                    <?php foreach( $this->civilite_list as $item ) : ?>
+                        <option value="<?php echo $item["ID_UTILISATEURCIVILITE"] ?>" <?php if($item["ID_UTILISATEURCIVILITE"] == $this->user_info["ID_UTILISATEURCIVILITE"]) echo "selected" ?> ><?php echo $item["LIBELLE_UTILISATEURCIVILITE"] ?></option>
+                    <?php endforeach ?>
+                </select>
+            </div>
+            <div class="col-md-5">
+			    <input class="form-control" type='text' maxlength="50" value="<?php if(isset($this->user_info["NOM_UTILISATEURINFORMATIONS"])) echo $this->user_info["NOM_UTILISATEURINFORMATIONS"] ?>" name='NOM_UTILISATEURINFORMATIONS' placeholder='Nom' />
+            </div>
+            <div class="col-md-5">
+			    <input class="form-control" type='text' maxlength="50" value="<?php if(isset($this->user_info["PRENOM_UTILISATEURINFORMATIONS"])) echo $this->user_info["PRENOM_UTILISATEURINFORMATIONS"] ?>" name='PRENOM_UTILISATEURINFORMATIONS' placeholder='Prénom' />
+            </div>
 		</dd>
 		
 		<!-- Téléphone fixe du contact -->
-		<dt>Téléphone</dt>
-		<dd>
-			<span><em class='sprite sprite-telephone' ></em> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFIXE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFIXE_UTILISATEURINFORMATIONS"] ?>" name='TELFIXE_UTILISATEURINFORMATIONS'/></span><br/>
-		</dd>
+		<div class="mt-4">
+            <dt>Téléphone</dt>
+            <dd>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class='glyphicon glyphicon-earphone'></i></span>
+                    <input class="form-control" type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFIXE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFIXE_UTILISATEURINFORMATIONS"] ?>" name='TELFIXE_UTILISATEURINFORMATIONS'/>
+                </div>
+            </dd>
+        </div>
                 
-                <dt>Fax</dt>
-		<dd>
-			<span><em class='sprite sprite-printer_empty' ></em> <input type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFAX_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFAX_UTILISATEURINFORMATIONS"] ?>" name='TELFAX_UTILISATEURINFORMATIONS' /></span><br/>
-		</dd>
+        <div class="mt-4">
+            <dt>Fax</dt>
+            <dd>
+                <div class="input-group">
+                            <span class="input-group-addon"><i class='glyphicon glyphicon-print' ></i></span>
+                    <input class="form-control" type='text' maxlength="20" value="<?php if(isset($this->user_info["TELFAX_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELFAX_UTILISATEURINFORMATIONS"] ?>" name='TELFAX_UTILISATEURINFORMATIONS' />
+                </div>
+            </dd>
+        </div>
                 
-                <dt>Portable</dt>
-		<dd>
-			<span><em class='sprite sprite-phone' ></em> <input type='text' maxlength="20"  value="<?php if(isset($this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>" name='TELPORTABLE_UTILISATEURINFORMATIONS' /></span>
-		</dd>
+        <div class="mt-4">
+            <dt>Portable</dt>
+            <dd>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class='glyphicon glyphicon-phone' ></i></span>
+                    <input class="form-control" type='text' maxlength="20"  value="<?php if(isset($this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"])) echo $this->user_info["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>" name='TELPORTABLE_UTILISATEURINFORMATIONS' />
+                </div>
+            </dd>
+        </div>
 		
 		<!-- Mail du contact-->
-		<dt>Courriel</dt>
-		<dd>
-			<input type='text' maxlength="50" value="<?php if(isset($this->user_info["MAIL_UTILISATEURINFORMATIONS"])) echo $this->user_info["MAIL_UTILISATEURINFORMATIONS"] ?>" name='MAIL_UTILISATEURINFORMATIONS' />
-		</dd>
+		<div class="mt-4">
+            <dt>Courriel</dt>
+            <dd>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class='glyphicon glyphicon-envelope' ></i></span>
+                    <input class="form-control" type='text' maxlength="50" value="<?php if(isset($this->user_info["MAIL_UTILISATEURINFORMATIONS"])) echo $this->user_info["MAIL_UTILISATEURINFORMATIONS"] ?>" name='MAIL_UTILISATEURINFORMATIONS' />
+                </div>
+            </dd>
+        </div>
 		
 		<!-- Site web du contact-->
-		<dt>Site web</dt>
-		<dd>
-			<input type='text' maxlength="100" value="<?php if(isset($this->user_info["WEB_UTILISATEURINFORMATIONS"])) echo $this->user_info["WEB_UTILISATEURINFORMATIONS"] ?>" name='WEB_UTILISATEURINFORMATIONS' />
-		</dd>
+		<div class="mt-4">
+            <dt>Site web</dt>
+            <dd>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class='glyphicon glyphicon-link' ></i></span>
+                    <input class="form-control" type='text' maxlength="100" value="<?php if(isset($this->user_info["WEB_UTILISATEURINFORMATIONS"])) echo $this->user_info["WEB_UTILISATEURINFORMATIONS"] ?>" name='WEB_UTILISATEURINFORMATIONS' />
+                </div>
+            </dd>
+        </div>
 		
 		<!-- Localisation du contact -->
-		<dt>Adresse</dt>
-		<dd>
-                        <span>Numéro : <input type='text' maxlength="10" value="<?php if(isset($this->user_info["NUMEROADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["NUMEROADRESSE_UTILISATEURINFORMATIONS"] ?>" name='NUMEROADRESSE_UTILISATEURINFORMATIONS'/></span><br/>
-			<span>Rue : <input type='text' maxlength="255" value="<?php if(isset($this->user_info["RUEADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["RUEADRESSE_UTILISATEURINFORMATIONS"] ?>" name='RUEADRESSE_UTILISATEURINFORMATIONS'/></span><br/>
-			<span>Code postal : <input type='text' maxlength="5" value="<?php if(isset($this->user_info["CPADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["CPADRESSE_UTILISATEURINFORMATIONS"] ?>" name='CPADRESSE_UTILISATEURINFORMATIONS'/></span><br/>
-			<span>Ville : <input type='text' maxlength="255" value="<?php if(isset($this->user_info["VILLEADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["VILLEADRESSE_UTILISATEURINFORMATIONS"] ?>" name='VILLEADRESSE_UTILISATEURINFORMATIONS'/></span><br/>
-			
-		</dd>
+		<div class="mt-4">
+            <dt>Adresse</dt>
+            <dd class="form-horizontal">
+                <div class="form-group">
+                    <label for="numero" class="col-md-1 control-label">Numéro</label>
+                    <div class="col-md-11">
+                        <input id="numero" class="form-control" type='text' maxlength="10" value="<?php if(isset($this->user_info["NUMEROADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["NUMEROADRESSE_UTILISATEURINFORMATIONS"] ?>" name='NUMEROADRESSE_UTILISATEURINFORMATIONS'/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="rue" class="col-md-1 control-label">Rue</label>
+                    <div class="col-md-11">
+                        <input id="rue" class="form-control" type='text' maxlength="255" value="<?php if(isset($this->user_info["RUEADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["RUEADRESSE_UTILISATEURINFORMATIONS"] ?>" name='RUEADRESSE_UTILISATEURINFORMATIONS'/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="cp" class="col-md-1 control-label">Code postal</label>
+                    <div class="col-md-11">
+                        <input id="cp" class="form-control" type='text' maxlength="5" value="<?php if(isset($this->user_info["CPADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["CPADRESSE_UTILISATEURINFORMATIONS"] ?>" name='CPADRESSE_UTILISATEURINFORMATIONS'/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="ville" class="col-md-1 control-label">Ville</label>
+                    <div class="col-md-11">
+                        <input id="ville" class="form-control" type='text' maxlength="255" value="<?php if(isset($this->user_info["VILLEADRESSE_UTILISATEURINFORMATIONS"])) echo $this->user_info["VILLEADRESSE_UTILISATEURINFORMATIONS"] ?>" name='VILLEADRESSE_UTILISATEURINFORMATIONS'/>
+                    </div>
+                </div>
+            </dd>
+        </div>
 		
 		<!-- Observation -->
-		<dt>Observation</dt>
-		<dd>
-			<textarea name='OBS_UTILISATEURINFORMATIONS' style="width: 100%"><?php if(isset($this->user_info["OBS_UTILISATEURINFORMATIONS"])) echo $this->user_info["OBS_UTILISATEURINFORMATIONS"] ?></textarea>
-		</dd>
+		<div class="mt-4">
+            <dt>Observation</dt>
+            <dd>
+                <textarea class="form-control" name='OBS_UTILISATEURINFORMATIONS' style="width: 100%"><?php if(isset($this->user_info["OBS_UTILISATEURINFORMATIONS"])) echo $this->user_info["OBS_UTILISATEURINFORMATIONS"] ?></textarea>
+            </dd>
+        </div>
 	</dl>
 	
 	<input type='hidden' name='item' value='<?php echo $this->item ?>' />
 	<input type='hidden' name='id' value='<?php echo $this->id ?>' />
-	
 </form>
